chore: tweak logo
License: MIT
Signed-off-by: Oli Evans <oli@zilla.org.uk>

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,11 @@
 ---
-import { Image } from 'astro:assets';
 import Layout from '../layouts/Layout.astro';
-import logo from '../assets/mowll.png'
 ---
 
 <Layout>
 	<h1 class="bg-royal">
-		<Image class="mx-auto py-12" src={logo} alt="Mowell Street Studios" width={200} />
+		<img class="mx-auto py-12" src="/mowll.png" width="200" height="151" />
 	</h1>
-	<!-- <main class="rounded-lg bg-galverston-pink mt-16 p-8 mx-auto max-w-xl border-t-8 border-coral"> -->
 	<main class=" bg-gray-200 py-12 px-6 border-t-20 border-coral mx-auto max-w-xl">
 		<div class="mx-auto max-w-lg">
 			<h2 class="text-coral uppercase tracking-wider text-xl font-semibold pb-10">Studio space to hire</h2>
