feat: svg logo. better colors.
License: MIT
Signed-off-by: Oli Evans <oli@zilla.org.uk>

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,7 +10,7 @@ import "../styles/global.css";
 		<meta name="generator" content={Astro.generator} />
 		<title>Mowll Street Studios</title>
 	</head>
-	<body class="bg-royal font-sans">
+	<body class="bg-galverston-pink font-sans">
 		<slot />
 	</body>
 </html>
